[gd_scene load_steps=5 format=2]

[ext_resource path="res://Actors/Zones/WeaponHitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/WeaponAssets/WallOfFire.png" type="Texture" id=2]
[ext_resource path="res://Weapons/AreaOfEffect.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 40.0

[node name="AreaOfEffect" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
z_index = -1
texture = ExtResource( 2 )

[node name="WeaponHitbox" parent="." instance=ExtResource( 1 )]

[node name="WeaponCollision" parent="WeaponHitbox" index="0"]
rotation = 0.0
disabled = false

[node name="ParryCollision" parent="WeaponHitbox/ParryHitbox" index="0"]
rotation = 0.0
disabled = false

[node name="TickTimer" type="Timer" parent="."]

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true

[editable path="WeaponHitbox"]
